[gd_scene load_steps=10 format=3 uid="uid://cs0fjrcj3u6al"]

[ext_resource type="FontFile" uid="uid://duf2yfwdtohl8" path="res://FONTS/retropix.ttf/retropix.ttf" id="1_6ayig"]
[ext_resource type="Script" uid="uid://br17smbe4qoet" path="res://MiniGameTscn/password_puzzle_2.gd" id="1_u0vfv"]
[ext_resource type="Texture2D" uid="uid://dwoetptfkaw62" path="res://MiniGameAssets/Button_start.png" id="2_u0vfv"]
[ext_resource type="AudioStream" uid="uid://blkicg4i3ea85" path="res://sounds/slow-cinematic-clock-ticking-tension-2-323078.mp3" id="3_slicq"]
[ext_resource type="AudioStream" uid="uid://11wdcxwppyf3" path="res://sounds/clock-ticking-sound-effect-240503.mp3" id="4_e674n"]
[ext_resource type="AudioStream" uid="uid://c6dkpsnbo8egm" path="res://sounds/6_Stinger_Victory_1_Master.mp3" id="5_mlsbu"]
[ext_resource type="Texture2D" uid="uid://drt28akcptlx0" path="res://MiniGameAssets/Button_stop.png" id="7_slicq"]
[ext_resource type="AudioStream" uid="uid://orbje1ptg0sb" path="res://sounds/30sec-2021-10-19_-_Funny_Bit_-_www.FesliyanStudios.com.mp3" id="8_e674n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8nv07"]
bg_color = Color(0.791317, 0.532941, 0.434592, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0vfv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 67.0
offset_right = 1051.0
offset_bottom = 583.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8nv07")

[node name="timer_end" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 75.0
offset_right = 2833.0
offset_bottom = 1515.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/normal_font = ExtResource("1_6ayig")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true

[node name="Timer" type="Timer" parent="timer_end"]

[node name="Instruction" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 186.0
offset_right = 7723.0
offset_bottom = 1286.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/normal_font = ExtResource("1_6ayig")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true
text = "[color=red]Warning![/color] Hackers are attempting to brute-force your login.  
Create a [color=red]strong password[/color] base on  the [color=orange]3 hints[/color] you've collected.  
You need [color=green][/color] to lock them out — or they’ll break in."

[node name="password_input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 314.0
offset_top = 329.0
offset_right = 867.0
offset_bottom = 375.0

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 399.0
offset_right = 661.0
offset_bottom = 511.0
texture_normal = ExtResource("2_u0vfv")
ignore_texture_size = true
stretch_mode = 0

[node name="Submit" type="RichTextLabel" parent="TextureButton"]
layout_mode = 0
offset_left = 41.0
offset_top = 37.0
offset_right = 901.0
offset_bottom = 377.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/normal_font = ExtResource("1_6ayig")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true
text = "Submit"

[node name="Soft_tick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_slicq")
parameters/looping = true

[node name="hard_tick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_e674n")
parameters/looping = true

[node name="victory" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_mlsbu")

[node name="retry" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 494.0
offset_right = 659.0
offset_bottom = 562.0
texture_normal = ExtResource("7_slicq")
ignore_texture_size = true
stretch_mode = 0

[node name="Retry" type="RichTextLabel" parent="retry"]
layout_mode = 0
offset_left = 41.0
offset_top = 17.0
offset_right = 901.0
offset_bottom = 357.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/normal_font = ExtResource("1_6ayig")
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true
text = "Retry"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_e674n")

[connection signal="pressed" from="retry" to="." method="_on_retry_2_pressed"]
